feat: add documentations  banners and tickets models
